[package]
name = "scrape-rs"
version = "0.1.0"
edition = "2021"
default-run = "main"

[[bin]]
name = "main"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0.72", features = ["backtrace"] }
async-trait = "0.1.72"
async-traits = "0.0.0"
regex = "1.9.3"
reqwest = "0.11.18"
serde = { version = "1.0.183", features = ["serde_derive", "rc"] }
serde_json = "1.0.104"
serde_yaml = "0.9.25"
tokio = { version = "1.29.1", features = ["full"] }
